--- a/public/assets_web/css/style.css
+++ b/public/assets_web/css/style.css
@@ -19421,7 +19421,7 @@
     -ms-flex-pack: center;
     justify-content: center;
     color: #4a5568;
-    background-color: #f3f5f9;
+    background-color: transparent;
     margin-right: 12px;
   }
   [dir="rtl"]
@@ -46400,8 +46400,8 @@
   }
 
   .banner-left-cart img{
-    width:30px;
-    height: 30px;
+    /* width:30px; */
+    height: 55px;
   }
 
   .banner-left-cart p{
